# onetabpy

./: README.md  pyproject.toml
src/onetabpy/: __init__.py  __main__.py  backup.py  main.py  restore.py
src/onetabpy/cli/: __main__.py
src/onetabpy/config/: config.py  log_config.py
src/onetabpy/utils/: browsers.py
