[tool.poetry]
name = "onetabpy"
version = "0.1.0"
description = "A Python package for interacting with OneTab data."
authors = ["Jimmy Briggs <jimmy.briggs@noclocks.dev>"]
readme = "README.md"
packages = [{include = "onetabpy", from = "src"}]


[tool.poetry.scripts]
onetabpy = "onetabpy.__main__:main"


[tool.poetry.dependencies]
python = ">=3.8,<=3.13"
pydantic = "^2.7.1"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
coverage = "^7.5.1"
covdefaults = "^2.3.0"
pytest-mock = "^3.14.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.21"
mkdocstrings = "^0.25.0"
mkdocs-click = "^0.8.1"
pymarkdown = "^0.1.4"
mkdocs-macros-plugin = "^1.0.5"
mkdocs-monorepo-plugin = "^1.1.0"
mkdocs-pdf-export-plugin = "^0.5.10"
mkdocs-table-reader-plugin = "^2.2.0"
mkdocs-autolinks-plugin = "^0.7.1"
mkdocs-redirects = "^1.2.1"
mkdocs-exclude = "^1.0.2"
mkdocs-exclude-search = "^0.6.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
